--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body { margin: 0; overflow: hidden;
 .layer { position: absolute; }
 .tile { position: absolute; width: 256px; height: 256px; }
 .tile path {
-/* fill: #444;
-*/
+ fill: #888;
+
 }
 
 </style>
