--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body { margin: 0; overflow: hidden;
 .layer { position: absolute; }
 .tile { position: absolute; width: 256px; height: 256px; }
 .tile path {
- fill: #888;
+ fill: #8aa;
 
 }
 
