--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<!-- Original code from Mike Bostock http://bl.ocks.org/mbostock/5593150
-     Adapted by Nelson Minar for a simple river map -->
+<!-- Original code from 
+    Nelson Minar https://github.com/NelsonMinar/vector-river-map
+    and Mike Bostock http://bl.ocks.org/mbostock/5593150
+    Adapted by Konstantin@Varik.ru for Moscow vector tile server with data-->
 <meta charset="utf-8">
 <style>
 
 body { margin: 0; overflow: hidden;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 11px; line-height: 16px;  }
+  font-size: 11px; line-height: 16px;  color:#222;}
 .map { position: relative; overflow: hidden; }
 .info { position: absolute; bottom: 0px; right: 20px; background-color: rgba(255, 255, 255, 0.7) }
 .layer { position: absolute; }
 .tile { position: absolute; width: 256px; height: 256px; }
 .tile path {
  fill: #444;
-
+}
+#slide {
+  width:50%;
 }
 
 </style>
 <body>
-<input id="slide" type="range" min="1490" max="2011" step="1" value="2011" onchange="updateYear(this.value)">
+<div id="slider_cont">
+  <input id="slide" type="range" min="1493" max="2010" step="1" value="2011" onchange="updateYear(this.value)"/><span id="yeartext">1493...2010</span>
+</div>  
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
 <script>
@@ -59,9 +65,11 @@ var info = map.append("div")
     .attr("class", "info");
 
 zoomed();
+updateYear(2010);
 
 function updateYear(year) {
   d3.selectAll('path').style('display',function(d){ if (d.properties.year<=year) {return null} else return 'none' ;});  
+  d3.select('#yeartext').text('1493...'+year);
 }
 
 function zoomed() {
