--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body { margin: 0; overflow: hidden;
 </style>
 <body>
 <div id="slider_cont">
-  <input id="slide" type="range" min="1800" max="2010" step="1" value="2011" onchange="updateYear(this.value)"/><span id="yeartext">1800...2010</span>
+  <input style="width:50%;" id="slide" type="range" min="1800" max="2010" step="1" value="2011" onchange="updateYear(this.value)"/><span id="yeartext">1800...2010</span>
 </div>  
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
