--- a/topo.html
+++ b/topo.html
@@ -85,7 +85,7 @@ var map = L.map('map', { minZoom: 1, maxZoom: 16 } );
  
 var hash = new L.Hash(map);
 if (!window.location.hash) {
-    map.setView([37.65, 55.75], 11);
+    map.setView([55.75,37.65], 11);
 }
 
 updateYear(2010);
