--- a/topo.html
+++ b/topo.html
@@ -11,8 +11,8 @@
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
   <![endif]-->
   <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-  <script src="http://www.somebits.com/rivers/lib/leaflet-hash.js"></script>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <!--script src="http://www.somebits.com/rivers/lib/leaflet-hash.js"></script-->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.min.js" charset="utf-8"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   
   <style type="text/css">
