--- a/topo.html
+++ b/topo.html
@@ -17,7 +17,8 @@
   
   <style type="text/css">
   html, body { height: 100% }
-  #map { min-height: 100%; background-color: #222;}
+  #map {   position: absolute; top:0; left: 0;
+ min-height: 100%; background-color: #222;}
   body {
       margin: 0;
       font-family: Helvetica, Arial, sans-serif; font-size: 12px;
@@ -28,6 +29,11 @@
   .leaflet-popup-content-wrapper {
       -webkit-border-radius: 5px;
       border-radius: 5px;
+  }
+  #slider_cont{
+    position: absolute;
+    top:10;
+    left: 20;
   }
    
   path { stroke-linejoin; round; stroke-linecap: round; fill: #ddd; stroke:none;stroke-width:0;}
