--- a/topo.html
+++ b/topo.html
@@ -17,8 +17,7 @@
   
   <style type="text/css">
   html, body { height: 100% }
-  #map {   position: absolute; top:0; left: 0;
- min-height: 100%; background-color: #222;}
+  #map {   min-height: 100%; background-color: #222;}
   body {
       margin: 0;
       font-family: Helvetica, Arial, sans-serif; font-size: 12px;
@@ -33,7 +32,6 @@
   #slider_cont{
     position: absolute;
     top:10;
-    left: 20;
   }
    
   path { stroke-linejoin; round; stroke-linecap: round; fill: #ddd; stroke:none;stroke-width:0;}
