--- a/topo.html
+++ b/topo.html
@@ -32,6 +32,7 @@
   #slider_cont{
     position: absolute;
     top:10;
+    width:100%;
   }
    
   path { stroke-linejoin; round; stroke-linecap: round; fill: #ddd; stroke:none;stroke-width:0;}
