--- a/topo.html
+++ b/topo.html
@@ -31,7 +31,7 @@
   }
   #slider_cont{
     position: absolute;
-    top:0;
+    bottom:0;
     left:0;
     width:100%;
   }
@@ -41,10 +41,10 @@
   </style>
    
   </head><body>
+<div id="map"></div>
 <div id="slider_cont">
   <input style="width:50%;color:#ddd;" id="slide" type="range" min="1800" max="2010" step="1" value="2011" oninput="updateYear(this.value)" onchange="updateYear(this.value)"/><span style="color:#ddd;" id="yeartext">1800...2010</span>
 </div>   
-<div id="map"></div>
  
 <script type="text/javascript">
  
